# iris

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
example/: CMakeLists.txt  adjacent_transform_view.cpp  adjacent_view.cpp  chunk_by_view.cpp  chunk_view.cpp  enumerate_view.cpp  generator.cpp  maybe_view.cpp  repeat_view.cpp  slide_view.cpp  utf_conversion.cpp  zip_transform_view.cpp  zip_view.cpp
include/iris/: algorithm.hpp  all.hpp  base64.hpp  bind.hpp  compat.hpp  config.hpp  coroutine.hpp  expected.hpp  generator.hpp  lazy.hpp  on_scope_exit.hpp  out_ptr.hpp  ranges.hpp  scope.hpp  semver.hpp  system.hpp  type_traits.hpp  utf.hpp  utf_view.hpp  utility.hpp
include/iris/__detail/: base64.hpp  manual_reset_event.hpp  static_storage.hpp  sync_wait.hpp  type_traits.hpp  utf.hpp
include/iris/__detail/__win32/: windows.hpp
include/iris/algorithm/: base.hpp  contains.hpp  ends_with.hpp  fold.hpp  iota.hpp  starts_with.hpp
include/iris/detail/: manual_reset_event.hpp  static_storage.hpp  sync_wait.hpp  type_traits.hpp
include/iris/encoding/: base64.hpp
include/iris/net/: interface.hpp  ip_address.hpp  ipv4_address.hpp  ipv6_address.hpp  mac_address.hpp  network_interface.hpp
include/iris/ranges/: adjacent_transform_view.hpp  adjacent_view.hpp  as_rvalue_view.hpp  base.hpp  base64_view.hpp  cartesian_product_view.hpp  chunk_by_view.hpp  chunk_view.hpp  elements_of.hpp  enumerate_view.hpp  join_with_view.hpp  range_adaptor_closure.hpp  slide_view.hpp  stride_view.hpp  to.hpp  utf_view.hpp  zip_transform_view.hpp  zip_view.hpp
include/iris/ranges/__detail/: copyable_box.hpp  non_propagating_cache.hpp  utility.hpp
include/iris/ranges/algorithm/: ends_with.hpp  find_last.hpp  fold.hpp  iota.hpp  shift.hpp  starts_with.hpp
include/iris/ranges/view/: adjacent_transform_view.hpp  adjacent_view.hpp  as_rvalue_view.hpp  base64_view.hpp  cartesian_product_view.hpp  chunk_by_view.hpp  chunk_view.hpp  concat_view.hpp  enumerate_view.hpp  join_with_view.hpp  maybe_view.hpp  repeat_view.hpp  slide_view.hpp  stride_view.hpp  unwrap_view.hpp  utf_view.hpp  zip_transform_view.hpp  zip_view.hpp
source/: system.unix.cpp  system.win.cpp  system_win.cpp
source/net/: interface.unix.cpp  interface.win.cpp  network_interface.unix.cpp  network_interface.win.cpp
test/: CMakeLists.txt  base64_test.cpp  bind_test.cpp  coroutine_test.cpp  expected_test.cpp  generator_test.cpp  lazy_test.cpp  on_scope_exit_test.cpp  out_ptr_test.cpp  scope_test.cpp  semver_test.cpp  system_test.cpp  test.hpp  type_traits_test.cpp  utf_test.cpp  utf_view_test.cpp  utility_tests.cpp
test/__detail/: base64_test.cpp  utf_test.cpp
test/algorithm/: contains_test.cpp  ends_with_test.cpp  fold_test.cpp  iota_test.cpp  shift_test.cpp  starts_with_test.cpp
test/encoding/: base64_test.cpp
test/net/: interface_test.cpp  ip_address_test.cpp  mac_address_test.cpp  network_interface_test.cpp
test/ranges/: adjacent_transform_view_test.cpp  adjacent_view_test.cpp  as_rvalue_view_test.cpp  base64_view_test.cpp  cartesian_product_view_test.cpp  chunk_by_view_test.cpp  chunk_view_test.cpp  enumerate_view_test.cpp  join_with_view_test.cpp  repeat_view_test.cpp  slide_view_test.cpp  stride_view_test.cpp  to_test.cpp  utf_view_test.cpp  zip_transform_view_test.cpp  zip_view_test.cpp
test/ranges/algorithm/: contains_test.cpp  ends_with_test.cpp  find_last_test.cpp  fold_test.cpp  iota_test.cpp  shift_test.cpp  starts_with_test.cpp
test/ranges/view/: adjacent_transform_view_test.cpp  adjacent_view_test.cpp  as_rvalue_view_test.cpp  base64_view_test.cpp  cartesian_product_view_test.cpp  chunk_by_view_test.cpp  chunk_view_test.cpp  concat_view_test.cpp  enumerate_view_test.cpp  join_with_view_test.cpp  maybe_view_test.cpp  repeat_view_test.cpp  slide_view_test.cpp  stride_view_test.cpp  unwrap_view_test.cpp  utf_view_test.cpp  zip_transform_view_test.cpp  zip_view_test.cpp
