file(GLOB_RECURSE IRIS_EXAMPLE_SOURCE_FILES "*.cpp")

foreach(file ${IRIS_EXAMPLE_SOURCE_FILES})
  get_filename_component(file_name ${file} NAME)
  string(REPLACE ".cpp" "" target_name ${file_name})
  add_executable(${target_name} ${file})
  target_include_directories(${target_name} PRIVATE ".")
  target_link_libraries(${target_name} PRIVATE iris)
  if(MSVC)
    target_compile_options(${target_name} PRIVATE "/utf-8" "/JMC")
  endif()
  if(WIN32)
    target_link_libraries(${target_name} PRIVATE Iphlpapi.lib Ws2_32.lib)
  endif()
endforeach()
