file(GLOB_RECURSE IRIS_TESTS_SOURCE_FILES "*_test.cpp")

foreach(file ${IRIS_TESTS_SOURCE_FILES})
	get_filename_component(file_name ${file} NAME)
	string(REPLACE ".cpp" "" target_name ${file_name})
	add_executable(${target_name} ${file})
	target_include_directories(${target_name} PRIVATE "./thirdparty")
	target_link_libraries(${target_name} PRIVATE iris)
	add_test(${target_name} ${target_name})
endforeach()
