file(GLOB_RECURSE IRIS_TESTS_SOURCE_FILES "*_test.cpp")

foreach(file ${IRIS_TESTS_SOURCE_FILES})
  get_filename_component(file_name ${file} NAME)
  string(REPLACE ".cpp" "" target_name ${file_name})
  add_executable(${target_name} ${file})
  target_include_directories(${target_name} PRIVATE ".")
  target_link_libraries(${target_name} PRIVATE iris)
  if(MSVC)
    target_compile_options(${target_name} PRIVATE "/utf-8" "/JMC")
  endif()
  if(WIN32)
    target_link_libraries(${target_name} PRIVATE Iphlpapi.lib Ws2_32.lib)
  endif()
  if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION
                                              VERSION_LESS 11)
    target_compile_options(${target_name} PRIVATE "-fcoroutines")
  endif()
  add_test(${target_name} ${target_name})
endforeach()
